WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228955
Media element is not always autoplaying when going from background to foreground if it is initially not in viewport
https://bugs.webkit.org/show_bug.cgi?id=228955
Summary
Media element is not always autoplaying when going from background to foregro...
youenn fablet
Reported
2021-08-10 07:59:48 PDT
Media element is not always autoplaying when going from background to foreground if it is initially not in viewport
Attachments
Patch
(5.53 KB, patch)
2021-08-10 08:05 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.54 KB, patch)
2021-08-10 08:44 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(6.56 KB, patch)
2021-08-11 08:00 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(6.36 KB, patch)
2021-08-11 08:58 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2021-08-10 08:05:32 PDT
Created
attachment 435257
[details]
Patch
youenn fablet
Comment 2
2021-08-10 08:44:25 PDT
Created
attachment 435260
[details]
Patch
Eric Carlson
Comment 3
2021-08-10 11:12:50 PDT
rdar://81751653
youenn fablet
Comment 4
2021-08-11 08:00:37 PDT
Created
attachment 435346
[details]
Patch
youenn fablet
Comment 5
2021-08-11 08:58:27 PDT
Created
attachment 435352
[details]
Patch
EWS
Comment 6
2021-08-11 11:08:56 PDT
Committed
r280920
(
240440@main
): <
https://commits.webkit.org/240440@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435352
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug